projects/demo/src/styles.less
@import '@taiga-ui/styles/taiga-ui-global';

body {
    margin: 0;
}

html,
body {
    height: 100%;
}

markdown {
    display: block;

    h1 {
        font: var(--tui-font-heading-1);
    }

    h2 {
        font: var(--tui-font-heading-2);
    }

    h3 {
        font: var(--tui-font-heading-3);
    }

    h4 {
        font: var(--tui-font-heading-4);
    }

    h5 {
        font: var(--tui-font-heading-5);
    }

    h6 {
        font: var(--tui-font-heading-6);
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        margin: 3rem 0 1rem;
    }

    img {
        margin: 0.625rem 3rem 1.5rem 0;
        max-width: 27.5rem;

        &:nth-child(2n) {
            margin-right: 0;
        }
    }

    ul {
        &:extend(.tui-list);
    }

    li {
        position: relative;
        padding-left: 1.5rem;
        word-wrap: break-word;
        margin-top: 0.75rem;

        &:before {
            content: '';
            position: absolute;
            left: 0;
            top: 0.5rem;
            width: 0.5rem;
            height: 0.5rem;
            border-radius: 100%;
            background-color: var(--tui-primary);
        }

        // nested list
        li {
            color: var(--tui-text-02);

            &:before {
                content: '\2014';
                left: 0;
                top: auto;
                width: auto;
                height: auto;
                background-color: transparent;
            }
        }
    }

    & a {
        text-decoration: none;
        color: var(--tui-link);

        &:hover,
        &:active {
            color: var(--tui-link-hover);
        }
    }
}

